fixed broken references

--- a/2_background.tex
+++ b/2_background.tex
@@ -380,6 +380,7 @@ mechanism are software-controlled, exposing microarchitectural details to the
 programmer and requiring significant changes to the compiler toolchain.
 
 \section{Coarse-grain reconfigurable arrays}
+\label{background:cgras}
 Since Wavescalar, Trips, and ELM there has been a resurgence of spatial-dataflow architectures, called coarse-grain reconfigurable arrays (CGRAs), because they offer better energy efficiency and performance with lower hardware complexity.
 % 
 % CGRAs achieve high energy-efficiency and performance with lower hardware complexity.
