--- a/refs.bib
+++ b/refs.bib
@@ -1065,6 +1065,17 @@ archivePrefix = "arXiv",
   pages={115-127},
   doi={10.1109/ISCA.2016.20}} 
 
+@article{sujeeth2014delite,
+  title={Delite: A compiler architecture for performance-oriented embedded domain-specific languages},
+  author={Sujeeth, Arvind K and Brown, Kevin J and Lee, Hyoukjoong and Rompf, Tiark and Chafi, Hassan and Odersky, Martin and Olukotun, Kunle},
+  journal={ACM Transactions on Embedded Computing Systems (TECS)},
+  volume={13},
+  number={4s},
+  pages={1--25},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
+
 @inproceedings{pex,
  author = {Tillmann, Nikolai and De Halleux, Jonathan},
  title = {Pex: White Box Test Generation for .NET},
@@ -10526,3 +10537,200 @@ series = {ASPLOS '17}
 }
 
  @misc{stm32l1, title={STM32L152RE}, url={https://www.st.com/en/microcontrollers-microprocessors/stm32l152re.html}, journal={STMicroelectronics}} 
+
+ @inproceedings{wang2019hycube,
+  title={Hycube: A 0.9 v 26.4 mops/mw, 290 pj/op, power efficient accelerator for iot applications},
+  author={Wang, Bo and Karunarathne, Manupa and Kulkarni, Aditi and Mitra, Tulika and Peh, Li-Shiuan},
+  booktitle={2019 IEEE Asian Solid-State Circuits Conference (A-SSCC)},
+  pages={133--136},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{compiler-sync,
+  author={Midkiff, Samuel P. and Padua, David A.},
+  journal={IEEE Transactions on Computers},
+  title={Compiler Algorithms for Synchronization},
+  year={1987},
+  volume={C-36},
+  number={12},
+  pages={1485-1495},
+  doi={10.1109/TC.1987.5009499}
+}
+
+@inproceedings{oskin:isca98:active-pages,
+ author = {Oskin, M. and Chong, F. and Sherwood, T.},
+ crossref = {isca98},
+ title = {Active Pages: A Model of Computation for Intelligent Memory},
+}
+
+@inproceedings{schwedock:isca22:tako,
+ author = {Schwedock, B. C. and Yoovidhya, P. and Seibert, J. and Beckmann, N.},
+ crossref = {isca22},
+ title = {täkō: A Polymorphic Cache Hierarchy for General-Purpose Optimization of Data Movement},
+}
+
+@inproceedings{cadical,
+  author    = {Armin Biere and Katalin Fazekas and Mathias Fleury and Maximillian Heisinger},
+  title     = {{CaDiCaL}, {Kissat}, {Paracooba}, {Plingeling} and {Treengeling}
+   Entering the {SAT Competition 2020}},
+  pages     = {51--53},
+  editor    = {Tomas Balyo and Nils Froleyks and Marijn Heule and 
+   Markus Iser and Matti J{\"a}rvisalo and Martin Suda},
+  booktitle = {Proc.~of {SAT Competition} 2020 -- Solver and Benchmark Descriptions},
+  volume    = {B-2020-1},
+  series    = {Department of Computer Science Report Series B},
+  publisher = {University of Helsinki},
+  year      = 2020,
+}
+
+@inproceedings{yalsat,
+  author    = {Biere, Armin},
+  title     = {Yet another Local Search Solver and {Lingeling} and Friends Entering the {SAT Competition 2014}},
+  pages     = {39-40},
+  booktitle = {Proc.~of {SAT Competition} 2014 -- Solver and Benchmark Descriptions},
+  editor    = {Adrian Balint and Andon Belov and Marijn Heule and Matti J{\"a}rvisalo},
+  volume    = {B-2014-2},
+  series    = {Department of Computer Science Series of Publications B},
+  publisher = {University of Helsinki},
+  year      = 2014,
+}
+
+@inproceedings{pathseeker,
+  title={PathSeeker: a fast mapping algorithm for CGRAs},
+  author={Balasubramanian, Mahesh and Shrivastava, Aviral},
+  booktitle={2022 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
+  pages={268--273},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{chordmap,
+  title={Chordmap: Automated mapping of streaming applications onto cgra},
+  author={Li, Zhaoying and Wijerathne, Dhananjaya and Chen, Xianzhang and Pathania, Anuj and Mitra, Tulika},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  volume={41},
+  number={2},
+  pages={306--319},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{lee2021ultra,
+  title={Ultra-Fast CGRA Scheduling to Enable Run Time, Programmable CGRAs},
+  author={Lee, Jinho and Carlson, Trevor E},
+  booktitle={2021 58th ACM/IEEE Design Automation Conference (DAC)},
+  pages={1207--1212},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{himap,
+  title={HiMap: Fast and scalable high-quality mapping on CGRA via hierarchical abstraction},
+  author={Wijerathne, Dhananjaya and Li, Zhaoying and Pathania, Anuj and Mitra, Tulika and Thiele, Lothar},
+  journal={IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems},
+  year={2021},
+  publisher={IEEE}
+}
+
+@inproceedings{4dcgra,
+  title={4D-CGRA: Introducing branch dimension to spatio-temporal application mapping on CGRAs},
+  author={Karunaratne, Manupa and Wijerathne, Dhananjaya and Mitra, Tulika and Peh, Li-Shiuan},
+  booktitle={2019 IEEE/ACM International Conference on Computer-Aided Design (ICCAD)},
+  pages={1--8},
+  year={2019},
+  organization={IEEE}
+}
+
+@article{amp2020,
+  title={Towards higher performance and robust compilation for CGRA modulo scheduling},
+  author={Zhao, Zhongyuan and Sheng, Weiguang and Wang, Qin and Yin, Wenzhi and Ye, Pengfei and Li, Jinchao and Mao, Zhigang},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={31},
+  number={9},
+  pages={2201--2219},
+  year={2020},
+  publisher={IEEE}
+}
+
+@inproceedings{ureca,
+  title={Ureca: Unified register file for cgras},
+  author={Dave, Shail and Balasubramanian, Mahesh and Shrivastava, Aviral},
+  booktitle={2018 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
+  pages={1081--1086},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{balasubramanian2018laser,
+  title={LASER: A hardware/software approach to accelerate complicated loops on CGRAs},
+  author={Balasubramanian, Mahesh and Dave, Shail and Shrivastava, Aviral and Jeyapaul, Reiley},
+  booktitle={2018 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
+  pages={1069--1074},
+  year={2018},
+  organization={IEEE}
+}
+
+@article{pager2015software,
+  title={A software scheme for multithreading on CGRAs},
+  author={Pager, Jared and Jeyapaul, Reiley and Shrivastava, Aviral},
+  journal={ACM Transactions on Embedded Computing Systems (TECS)},
+  volume={14},
+  number={1},
+  pages={1--26},
+  year={2015},
+  publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{hamzeh2014branch,
+  title={Branch-aware loop mapping on CGRAs},
+  author={Hamzeh, Mahdi and Shrivastava, Aviral and Vrudhula, Sarma},
+  booktitle={Proceedings of the 51st Annual Design Automation Conference},
+  pages={1--6},
+  year={2014}
+}
+
+@inproceedings{hamzeh2012epimap,
+  title={EPIMap: Using epimorphism to map applications on CGRAs},
+  author={Hamzeh, Mahdi and Shrivastava, Aviral and Vrudhula, Sarma},
+  booktitle={Proceedings of the 49th Annual Design Automation Conference},
+  pages={1284--1291},
+  year={2012}
+}
+
+@inproceedings{karunaratne2018dnestmap,
+  title={Dnestmap: mapping deeply-nested loops on ultra-low power cgras},
+  author={Karunaratne, Manupa and Tan, Cheng and Kulkarni, Aditi and Mitra, Tulika and Peh, Li-Shiuan},
+  booktitle={Proceedings of the 55th Annual Design Automation Conference},
+  pages={1--6},
+  year={2018}
+}
+
+@article{cvxpy,
+  author  = {Steven Diamond and Stephen Boyd},
+  title   = {{CVXPY}: {A} {P}ython-embedded modeling language for convex optimization},
+  journal = {Journal of Machine Learning Research},
+  year    = {2016},
+  volume  = {17},
+  number  = {83},
+  pages   = {1--5},
+}
+
+@inproceedings{torng2021ultra,
+  title={Ultra-elastic cgras for irregular loop specialization},
+  author={Torng, Christopher and Pan, Peitian and Ou, Yanghui and Tan, Cheng and Batten, Christopher},
+  booktitle={2021 IEEE International Symposium on High-Performance Computer Architecture (HPCA)},
+  pages={412--425},
+  year={2021},
+  organization={IEEE}
+}
+
+ @misc{torng_pan_2021, title={UE-CGRA HPCA 2021 Artifact}, url={https://github.com/cornell-brg/torng-uecgra-scripts-hpca2021}, journal={GitHub}, author={Torng, Chris and Pan, Peitian}, year={2021}, month={Mar}} 
+
+@inproceedings{kim2009hierarchical,
+  title={Hierarchical reconfigurable computing arrays for efficient CGRA-based embedded systems},
+  author={Kim, Yoonjin and Mahapatra, Rabi N},
+  booktitle={Proceedings of the 46th Annual Design Automation Conference},
+  pages={826--831},
+  year={2009}
+}
