--- a/riptide/1_intro.tex
+++ b/riptide/1_intro.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-\label{sec:intro}
+\label{riptide:intro}
 
 \lettrine{R}{ecent} advances in machine learning,
 sensor devices, and
@@ -76,7 +76,7 @@ buffering in a centralized register file.
 In the context of ultra-low-power sensing applications,
 \snafu~\cite{snafu} is a CGRA-generation framework designed from
 the ground up to minimize energy, in contrast to prior,
-performance-focused CGRAs (\autoref{sec:background}).
+performance-focused CGRAs (\autoref{riptide:background}).
 %
 \snafu CGRAs reduce energy by 5$\times$ v.\ ultra-low-power von Neumann
 cores, and they come within 3$\times$ of ASIC energy efficiency.
@@ -322,14 +322,14 @@ the majority of computations.
 
 \paragraph{Road map.}
 %
-\autoref{sec:background} covers background, and
-\autoref{sec:overview} gives an overview of \riptide.
+\autoref{riptide:background} covers background, and
+\autoref{riptide:overview} gives an overview of \riptide.
 %
-Secs.~\ref{sec:cf}, \ref{sec:compiler}, and \ref{sec:arch} present
+Secs.~\autoref{riptide:cf}, \autoref{riptide:compiler}, and \ref{riptide:arch} present
 \riptide's architecture, compiler, and microarchitecture, respectively.
 %
-Secs.~\ref{sec:method} and \ref{sec:eval} evaluate \riptide, and
-\autoref{sec:implications} concludes by discussing \riptide's broader implications.
+Secs.~\autoref{riptide:method} and \autoref{riptide:eval} evaluate \riptide, and
+\autoref{riptide:implications} concludes by discussing \riptide's broader implications.
 
 %
 %\begin{itemize}
