--- a/riptide/D_appendix.tex
+++ b/riptide/D_appendix.tex
@@ -1,7 +1,7 @@
 \onecolumn
 \appendix
 \section{Appendix}
-\label{sec:appendix}
+\label{riptide:appendix}
 % This section contains the SAT and ILP formulations for mapping. 
 
 \tabRipTideMapVars
