--- a/riptide/floats.tex
+++ b/riptide/floats.tex
@@ -217,12 +217,12 @@
 			\bottomrule
 		\end{tabular}
 	}
-	\caption{\tmp{Qualitative comparison of \riptide to prior work.
+	\caption{Qualitative comparison of \riptide to prior work.
           \riptide's goal is to \emph{minimize energy}
           by executing \emph{entire functions} on the CGRA fabric.
           To achieve this, \riptide supports arbitrary control flow and irregular memory access,
           whereas prior CGRAs are limited to affine loops or a subset of common program idioms.
-          \riptide compiles lightly annotated C to an efficient CGRA configuration.}
+          \riptide compiles lightly annotated C to an efficient CGRA configuration.
         }
 	\label{tab:riptide:background}
 \end{table*}
